# ocaml-arpack

./: README.md  arpack.opam
examples/: dune  test.ml
src/arpack/: arpack.ml  arpack_c.ml  arpack_c.mli  arpack_d.ml  arpack_d.mli  arpack_generic.ml  arpack_generic.mli  arpack_intf.ml  arpack_s.ml  arpack_s.mli  arpack_z.ml  arpack_z.mli  dune  eigs.ml  eigsh.ml
src/bindings/: arpack_bindings.ml  arpack_gen.ml  dune
src/config/: discover.ml
src/wrapper/: arpack_core.ml  dune
