opam-version: "2.0"
authors: [ "Ta-Chu Kao" ]
license: "MIT"
homepage: "https://github.com/tachukao/ocaml-arpack"
dev-repo: "git+https://github.com/tachukao/ocaml-arpack.git"
bug-reports: "https://github.com/tachukao/ocaml-arpack/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "ctypes"
]
synopsis: "Bindings to Arpack-NG"
description: "OCaml bindings to ARPACK"
